--- a/WCSC/WCSC.csproj
+++ b/WCSC/WCSC.csproj
@@ -87,16 +87,16 @@
       <DependentUpon>Check_Connection_with_Controllers.cs</DependentUpon>
     </Compile>
     <Compile Include="DataByDays.cs">
-      <DependentUpon>ModelBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataByHours.cs">
-      <DependentUpon>ModelBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataByMonth.cs">
-      <DependentUpon>ModelBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataByShift.cs">
-      <DependentUpon>ModelBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Device.cs" />
     <Compile Include="Form1.cs">
@@ -106,27 +106,30 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="MeasurementData.cs">
-      <DependentUpon>ModelBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="ModelBD.Context.cs">
+    <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelBD.Context.tt</DependentUpon>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="ModelBD.cs">
+    <Compile Include="Model1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="ModelBD.Designer.cs">
+    <Compile Include="Model1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelBD.edmx</DependentUpon>
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Personnel.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScalesInformation.cs">
-      <DependentUpon>ModelBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
@@ -134,11 +137,29 @@
     <Compile Include="Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
+    <Compile Include="WeightDay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WeightDay.Designer.cs">
+      <DependentUpon>WeightDay.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WeightHour.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WeightHour.Designer.cs">
+      <DependentUpon>WeightHour.cs</DependentUpon>
+    </Compile>
     <Compile Include="WeightInformation.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="WeightInformation.Designer.cs">
       <DependentUpon>WeightInformation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WeightMonth.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WeightMonth.Designer.cs">
+      <DependentUpon>WeightMonth.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="archive.resx">
       <DependentUpon>archive.cs</DependentUpon>
@@ -161,15 +182,24 @@
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="WeightDay.resx">
+      <DependentUpon>WeightDay.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WeightHour.resx">
+      <DependentUpon>WeightHour.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WeightInformation.resx">
       <DependentUpon>WeightInformation.cs</DependentUpon>
     </EmbeddedResource>
-    <EntityDeploy Include="ModelBD.edmx">
+    <EmbeddedResource Include="WeightMonth.resx">
+      <DependentUpon>WeightMonth.cs</DependentUpon>
+    </EmbeddedResource>
+    <EntityDeploy Include="Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ModelBD.Designer.cs</LastGenOutput>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="ModelBD.edmx.diagram">
-      <DependentUpon>ModelBD.edmx</DependentUpon>
+    <None Include="Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -189,15 +219,15 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ModelBD.Context.tt">
+    <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ModelBD.edmx</DependentUpon>
-      <LastGenOutput>ModelBD.Context.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="ModelBD.tt">
+    <Content Include="Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ModelBD.edmx</DependentUpon>
-      <LastGenOutput>ModelBD.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
